RESOLVED FIXED199519
[iOS] Local capture MediaStreamTrack does not render in portrait mode
https://bugs.webkit.org/show_bug.cgi?id=199519
Summary [iOS] Local capture MediaStreamTrack does not render in portrait mode
youenn fablet
Reported 2019-07-05 09:16:50 PDT
[iOS] Local capture MediaStreamTrack does not render locally in portrait mode Rendering works fine in landscape mode.
Attachments
Patch (16.53 KB, patch)
2019-07-05 10:34 PDT, youenn fablet
no flags
Patch (16.47 KB, patch)
2019-07-05 10:39 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-07-05 09:16:56 PDT
This might be a regression due to https://trac.webkit.org/changeset/246644
Radar WebKit Bug Importer
Comment 2 2019-07-05 09:18:49 PDT
Radar WebKit Bug Importer
Comment 3 2019-07-05 09:18:50 PDT
youenn fablet
Comment 4 2019-07-05 10:34:09 PDT
EWS Watchlist
Comment 5 2019-07-05 10:38:41 PDT
Attachment 373511 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:483: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 6 2019-07-05 10:39:52 PDT
WebKit Commit Bot
Comment 7 2019-07-05 11:54:20 PDT
Comment on attachment 373512 [details] Patch Clearing flags on attachment: 373512 Committed r247165: <https://trac.webkit.org/changeset/247165>
WebKit Commit Bot
Comment 8 2019-07-05 11:54:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.