[iOS] Local capture MediaStreamTrack does not render in portrait mode https://bugs.webkit.org/show_bug.cgi?id=199519 <rdar://problem/52689720>

Reviewed by Eric Carlson.

Source/WebCore:

RealtimeVideoSource was badly computing its size in case of rotation.
Whenever its underlying source is notifying of settings change,
compute the size and transpose it only in left/right case.

Update mock video source to cover that case.
Covered by updated test.

* platform/mediastream/RealtimeVideoSource.cpp:
(WebCore::RealtimeVideoSource::sourceSettingsChanged):
* platform/mediastream/mac/MockRealtimeVideoSourceMac.h:
* platform/mediastream/mac/MockRealtimeVideoSourceMac.mm:
(WebCore::MockRealtimeVideoSourceMac::updateSampleBuffer):
* platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::settings):
(WebCore::MockRealtimeVideoSource::orientationChanged):
(WebCore::MockRealtimeVideoSource::monitorOrientation):
* platform/mock/MockRealtimeVideoSource.h:

LayoutTests:

* webrtc/video-rotation-expected.txt:
* webrtc/video-rotation.html:


Canonical link: https://commits.webkit.org/213428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247165 268f45cc-cd09-0410-ab3c-d52691b4dbfc