Source/WebCore/platform/mediastream/mac/MockRealtimeVideoSourceMac.h
@@ -33,7 +33,6 @@
 #if ENABLE(MEDIA_STREAM)
 
 #include "MockRealtimeVideoSource.h"
-#include "OrientationNotifier.h"
 #include "PixelBufferConformerCV.h"
 
 typedef struct __CVBuffer *CVBufferRef;
@@ -45,7 +44,7 @@ namespace WebCore {
 
 class ImageTransferSessionVT;
 
-class MockRealtimeVideoSourceMac final : public MockRealtimeVideoSource, private OrientationNotifier::Observer {
+class MockRealtimeVideoSourceMac final : public MockRealtimeVideoSource {
 public:
     virtual ~MockRealtimeVideoSourceMac() = default;
 
@@ -57,11 +56,6 @@ private:
     void updateSampleBuffer() final;
     bool canResizeVideoFrames() const final { return true; }
 
-    void orientationChanged(int orientation) final;
-    void monitorOrientation(OrientationNotifier&) final;
-    MediaSample::VideoRotation sampleRotation() const final { return m_deviceOrientation; }
-
-    MediaSample::VideoRotation m_deviceOrientation { MediaSample::VideoRotation::None };
     std::unique_ptr<ImageTransferSessionVT> m_imageTransferSession;
     IntSize m_presetSize;
 };
